[styles] Fix share overlap on publications
(cherry picked from commit 6e7a473df3054a2e6e11d0ab1158fe4af73fcead)
(cherry picked from commit 13c12d748b9924ebd52673272e9b1798af8aaeaa)

--- a/html/com_publications/publications.scss
+++ b/html/com_publications/publications.scss
@@ -119,6 +119,8 @@
       object-fit: cover;
     }
     .share {
+      margin: 1em 0;
+
       .fa {
         margin-right: .2em;
       }
